# plugin-godot

./: .asset-template.json  .gitattributes  .gitignore  .release-please-manifest.json  CHANGELOG.md  LICENSE  README.md  asset-template-description.txt  backend.json  description.txt  release-please-config.json  script.command  test.gd  test.tscn
.github/workflows/: asset-store.yaml  release-please.yml  test.yml
addons/rivet/: plugin.cfg  rivet.gd  rivet.version.toml.tpl  rivet_cli_manager.gd  rivet_client.gd  rivet_constants.gd  rivet_editor_settings.gd  rivet_export_plugin.gd  rivet_global.gd  rivet_helper.gd  rivet_plugin_bridge.gd  rivet_task.gd  rivet_toolchain.gdextension  rivet_util.gd
addons/rivet/api/: rivet_api.gd  rivet_packages.gd  rivet_request.gd  rivet_response.gd
addons/rivet/cli/: rivet_aarch64_apple  rivet_linux  rivet_x86_apple
addons/rivet/devtools/: install.gd  rivet_cli.gd  rivet_cli_output.gd  rivet_devtools.gd  rivet_editor_settings.gd  rivet_export_plugin.gd  rivet_plugin_bridge.gd  rivet_thread.gd
addons/rivet/dock/: dock.gd  dock.tscn  loading.tscn  login.tscn  settings.tscn
addons/rivet/images/: icon-circle.png.import  icon-circle.svg.import  icon-square.png.import  icon-text-white.svg.import  white-logo.svg.import
addons/rivet/native/: target
addons/rivet/resources/: dockerignore  (+4 more)
addons/rivet_api/: dotenv.gd  plugin.cfg  rivet_api.gd  rivet_cli.gd  rivet_client.gd  rivet_helper.gd
examples/: .gdignore
examples/lobbies_servers/: .dockerignore  Dockerfile  backend.json  backend.prod.json  backend_lobbies_helper.gd  crate.tscn  deno.json  icon.svg.import  main.gd  main.tscn  menu.tscn  player.gd  player.tscn  project.godot  rivet.json  rivet.yaml  test.sh  world.tscn
media/: screenshot.png.import
media/asset-lib/: description.txt
rust/: Cargo.toml
rust/rivet-plugin-godot/: Cargo.toml
rust/rivet-plugin-godot/src/: lib.rs  task.rs  task_handle.rs  toolchain.rs
rust/rivet-plugin-godot/src/util/: log.rs  mod.rs  runtime.rs
rust/scripts/: build_ffi.sh  copy_toolchain.sh
scripts/: build_cross.sh  build_cross.ts  build_dev.sh  build_dev.ts  build_dev_windows.sh  build_dylib.sh  copy_dylib.sh  release.ts  resign_godot_macos.sh  run_dev.ts
(+386 files in other folders)
