[package]
name = "rivet-plugin-godot"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 'z'
lto = true
strip = true

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = ["serde", "experimental-threads"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.40.0", default-features = false, features = ["rt"] }
# toolchain = { path = "../../../toolchain/packages/toolchain", package = "rivet-toolchain" }
toolchain = { git = "https://github.com/rivet-gg/toolchain.git", rev = "802793b63fbbc08f810b6a49f5d4b1c931ee7aa1", package = "rivet-toolchain" }
lazy_static = "1.5"

