[package]
name = "rivet-plugin-godot"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 'z'
lto = true
strip = true

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = ["serde", "experimental-threads"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.40.0", default-features = false, features = ["rt"] }
# toolchain = { path = "../../../toolchain/packages/toolchain", package = "rivet-toolchain" }
toolchain = { git = "https://github.com/rivet-gg/toolchain.git", rev = "ad8221d5011ecc802e4b97e38d4597f44c7eda93", package = "rivet-toolchain" }
lazy_static = "1.5"

